style(themebuilder): fix horizontal scroll in dialog (#4061)

--- a/apps/themebuilder/app/_components/token-modal/token-modal.module.css
+++ b/apps/themebuilder/app/_components/token-modal/token-modal.module.css
@@ -18,6 +18,7 @@
   display: flex;
   flex-direction: column;
   gap: var(--ds-size-4);
+  width: 100%;
 }
 
 .infoBoxes {
